--- a/.github/workflows/pr-title-checker.yaml
+++ b/.github/workflows/pr-title-checker.yaml
@@ -14,6 +14,6 @@ jobs:
     steps:
       - uses: thehanimo/pr-title-checker@v1.4.1
         with:
-          GITHUB_TOKEN: ${{ secrets.TEST_SECRET }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_SECRET }}
           pass_on_octokit_error: false
           configuration_path: .github/pr-title-checker-config.json #(optional. defaults to .github/pr-title-checker-config.json)
